#pragma once

#include <QString>
#include <QVector>
#include <vector>
#include <memory>

#include "TacticalGraphic.h"

namespace domain {

// Output generated by evaluating a task
struct DesiredState {
    double targetHeadingDegrees = 0.0;
    double targetAltitudeMeters = 0.0;
    double targetSpeedKnots = 0.0;
};

// Base interface for all Tasks
class ITask {
public:
    virtual ~ITask() = default;
    
    enum class State { NotStarted, Running, Completed, Failed };
    
    virtual State getState() const = 0;
    
    // Evaluate the task geometry and return what the entity should physically do
    virtual DesiredState evaluate(double currentLat, double currentLon, double currentAlt, double currentHeading, double dt) = 0;
};

// Primitive Task: Fly a straight line to a geographic coordinate
class MoveToLocationTask : public ITask {
public:
    MoveToLocationTask(double targetLat, double targetLon, double targetAlt, double targetSpeedKnots);
    
    State getState() const override;
    DesiredState evaluate(double currentLat, double currentLon, double currentAlt, double currentHeading, double dt) override;

private:
    double m_targetLat;
    double m_targetLon;
    double m_targetAlt;
    double m_targetSpeed;
    State m_state = State::NotStarted;
};

class RouteTask : public ITask {
public:
    RouteTask(
        const QVector<RoutePoint>& points,
        double targetSpeedKnots,
        double arrivalToleranceMeters = 500.0);

    State getState() const override;
    DesiredState evaluate(double currentLat, double currentLon, double currentAlt, double currentHeading, double dt) override;
    int currentPointIndex() const;
    int totalPoints() const;
    RoutePoint currentTargetPoint() const;

private:
    bool currentPointReached(double distanceToPoint);
    void resetCurrentPointTracking();

    QVector<RoutePoint> m_points;
    double m_targetSpeed;
    double m_arrivalToleranceMeters;
    int m_currentPointIndex = 0;
    int m_trackedPointIndex = -1;
    double m_bestDistanceToCurrentPointMeters = 1.0e12;
    State m_state = State::NotStarted;
};

// Primitive Task: Fly a specific heading, altitude, and speed vector
class FlyHeadingAltitudeSpeedTask : public ITask {
public:
    FlyHeadingAltitudeSpeedTask(double targetHeading, double targetAlt, double targetSpeedKnots);
    
    State getState() const override;
    DesiredState evaluate(double currentLat, double currentLon, double currentAlt, double currentHeading, double dt) override;

private:
    double m_targetHeading;
    double m_targetAlt;
    double m_targetSpeed;
    State m_state = State::NotStarted;
};

// Primitive Task: Dynamically follow another entity
class FollowEntityTask : public ITask {
public:
    FollowEntityTask(
        double targetAlt,
        double targetSpeedKnots,
        double followDistanceMeters = 1000.0,
        double arrivalToleranceMeters = 100.0);
    
    // Explicitly feed target coordinates during the application tick
    void updateTargetLocation(double targetLat, double targetLon, double targetAlt, double targetSpeedKnots);
    
    State getState() const override;
    DesiredState evaluate(double currentLat, double currentLon, double currentAlt, double currentHeading, double dt) override;

private:
    double m_targetLat = 0.0;
    double m_targetLon = 0.0;
    double m_targetAlt = 0.0;
    double m_targetSpeed = 0.0;
    double m_fallbackAlt;
    double m_fallbackSpeed;
    double m_followDistanceMeters;
    double m_arrivalToleranceMeters;
    bool m_hasTargetData = false;
    State m_state = State::NotStarted;
};

// Primitive Task: Close horizontal distance to another entity.
class InterceptEntity2DTask : public ITask {
public:
    InterceptEntity2DTask(double speedKnots, double interceptDistanceMeters);

    void updateTargetLocation(double targetLat, double targetLon);

    State getState() const override;
    DesiredState evaluate(double currentLat, double currentLon, double currentAlt, double currentHeading, double dt) override;

private:
    double m_targetLat = 0.0;
    double m_targetLon = 0.0;
    double m_speedKnots;
    double m_interceptDistanceMeters;
    bool m_hasTargetData = false;
    State m_state = State::NotStarted;
};

// Primitive Task: Close horizontal and vertical distance to another entity.
class InterceptEntity3DTask : public ITask {
public:
    InterceptEntity3DTask(
        double speedKnots,
        double interceptDistanceMeters,
        double altitudeToleranceMeters);

    void updateTargetLocation(double targetLat, double targetLon, double targetAlt);

    State getState() const override;
    DesiredState evaluate(double currentLat, double currentLon, double currentAlt, double currentHeading, double dt) override;

private:
    double m_targetLat = 0.0;
    double m_targetLon = 0.0;
    double m_targetAlt = 0.0;
    double m_speedKnots;
    double m_interceptDistanceMeters;
    double m_altitudeToleranceMeters;
    bool m_hasTargetData = false;
    State m_state = State::NotStarted;
};

// Primitive Task: Orbit or patrol around a central point
class OrbitAreaTask : public ITask {
public:
    OrbitAreaTask(double centerLat, double centerLon, double radiusMeters, double targetAlt, double targetSpeedKnots, bool isPatrol = false);
    
    State getState() const override;
    DesiredState evaluate(double currentLat, double currentLon, double currentAlt, double currentHeading, double dt) override;

private:
    double m_centerLat;
    double m_centerLon;
    double m_radiusMeters;
    double m_targetAlt;
    double m_targetSpeed;
    bool m_isPatrol;
    State m_state = State::NotStarted;
};

class PatrolAreaTask : public ITask {
public:
    PatrolAreaTask(const QVector<RoutePoint>& patrolPoints, double targetAlt, double targetSpeedKnots);

    State getState() const override;
    DesiredState evaluate(double currentLat, double currentLon, double currentAlt, double currentHeading, double dt) override;

private:
    QVector<RoutePoint> m_patrolPoints;
    double m_targetAlt;
    double m_targetSpeed;
    int m_currentPointIndex = -1;
    bool m_patternActive = false;
    State m_state = State::NotStarted;
};

QVector<RoutePoint> buildPatrolRouteFromArea(const AreaDefinition& area);

// Task Stack manages execution of multiple tasks
class TaskStack {
public:
    void push(std::unique_ptr<ITask> task);
    void pop();
    ITask* top() const;
    bool isEmpty() const;
    
    DesiredState evaluateTop(
        double currentLat,
        double currentLon,
        double currentAlt,
        double currentHeading,
        double dt,
        ITask::State* evaluatedState = nullptr);

private:
    std::vector<std::unique_ptr<ITask>> m_stack;
};

} // namespace domain

// Legacy struct, kept for backward compatibility with FlightDynamicsEngine during refactor
struct EntityTask {
  QString taskType;
  bool enabled = false;
  QString status = QStringLiteral("Idle");
  double targetHeadingDegrees = 0.0;
  int targetAltitudeMeters = 0;
  double targetSpeedKnots = 0.0;
  double targetLatitude = 0.0;
  double targetLongitude = 0.0;
  QString targetEntityName;
  QString targetWaypointName;
  QString targetRouteName;
  QString targetAreaName;
  double targetAreaRadiusMeters = 0.0;
  double followDistanceMeters = 1000.0;
  double arrivalToleranceMeters = 100.0;
  double durationSeconds = 0.0;
  double elapsedSeconds = 0.0;
  int routeCurrentWaypointIndex = 0;
  int routeTotalWaypoints = 0;
  double interceptDistanceMeters = 500.0;
  double altitudeToleranceMeters = 250.0;
  double timeoutSeconds = 120.0;
};
